--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ langchainhub==0.1.18  # <-- CRITICAL FIX: For the ReAct agent
 faiss-cpu==1.8.0
 sentence-transformers==2.7.0
 pypdf==4.2.0
-unstructured==0.14.4
+unstructured
 nltk==3.8.1
 
 # Tools & Utilities
