--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ langchain-groq==0.1.5
 langchain-openai==0.1.7
 langchain-google-genai==1.0.5
 langchain-huggingface==0.0.3
-langchainhub==0.1.18  # <-- CRITICAL FIX: For the ReAct agent
+langchainhub==0.1.18
 
 # RAG & Document Processing
-chromadb==0.5.4
+chromadb==0.5.4  # <-- FIX: Replaced faiss-cpu with chromadb
 sentence-transformers==2.7.0
 pypdf==4.2.0
 unstructured
@@ -22,7 +22,7 @@ nltk==3.8.1
 # Tools & Utilities
 tavily-python==0.3.3
 gTTS==2.5.1
-certifi==2024.7.4  # <-- CRITICAL FIX: For SSL errors
+certifi==2024.7.4
 
 # Dependency Warning Fix
 urllib3==2.2.1
