--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 streamlit==1.36.0
 python-dotenv==1.0.1
 
-# LangChain Libraries - Pinned for stability
+# LangChain Libraries
 langchain==0.2.0
 langchain-community==0.2.0
 langchain-core==0.2.1
@@ -16,7 +16,7 @@ langchainhub==0.1.18
 chromadb==0.5.4
 sentence-transformers==2.7.0
 pypdf==4.2.0
-unstructured==0.14.4
+unstructured  # <-- FIX: Unpinned for better cloud compatibility
 nltk==3.8.1
 
 # Tools & Utilities
