--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,25 @@
+# requirements.txt
+
 # Core Frameworks
 streamlit==1.36.0
 python-dotenv==1.0.1
 
 # LangChain Libraries
-langchain==0.2.0
-langchain-community==0.2.0
-langchain-core==0.2.1
+langchain==0.2.5
+langchain-core==0.2.9
+langchain-community==0.2.4
 langchain-groq==0.1.5
-langchain-openai==0.1.7
+langchain-openai==0.1.8
 langchain-google-genai==1.0.5
 langchain-huggingface==0.0.3
-langchainhub==0.1.18
+langchainhub==0.1.20
 
-# RAG & Document Processing
-faiss-cpu==1.7.4  # <-- FIX: Using FAISS for cloud stability
-sentence-transformers==2.7.0
+# RAG & Document Processing (ChromaDB for vector storage)
+chromadb==0.5.3
 pypdf==4.2.0
-unstructured[docx]
-nltk==3.8.1
+python-docx==1.1.2
+unstructured==0.14.8
 
 # Tools & Utilities
 tavily-python==0.3.3
-gTTS==2.5.1
-certifi==2024.7.4
-
-# Dependency Warning Fix
-urllib3==2.2.1
-charset-normalizer==3.3.2
-requests==2.31.0
+gtts==2.5.1
