--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,8 @@ chromadb==0.5.3
 pypdf==4.2.0
 python-docx==1.1.2
 unstructured[pdf]==0.14.8
-# FIX: Explicitly install opencv-python-headless to prevent NameError
+# FIX: Pin pdfminer.six to a stable version to prevent PSSyntaxError
+pdfminer.six==20221105
 opencv-python-headless==4.9.0.80
 nltk==3.8.1
 certifi==2024.7.4
