--- a/requirements.txt
+++ b/requirements.txt
@@ -23,9 +23,10 @@ unstructured[pdf]==0.14.8
 pdfminer.six==20221105
 opencv-python-headless==4.9.0.80
 nltk==3.8.1
-certifi==2024.7.4
+certifi==2.4.7.4
 
 # Tools & Utilities
 tavily-python==0.3.3
 gtts==2.5.1
+# FIX: Pin rich to a version compatible with Streamlit
 rich==13.7.1
