--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ langchain-core==0.2.9
 langchain-community==0.2.4
 langchain-groq==0.1.5
 langchain-openai==0.1.8
-langchain-google-genai==1.0.5
+langchain-google-genai==0.1.5
 langchain-huggingface==0.0.3
 langchainhub==0.1.20
 
@@ -28,4 +28,5 @@ certifi==2.4.7.4
 # Tools & Utilities
 tavily-python==0.3.3
 gtts==2.5.1
+# FIX: Pin rich to a version compatible with Streamlit
 rich==13.7.1
