--- a/requirements.txt
+++ b/requirements.txt
@@ -16,14 +16,14 @@ langchain-huggingface==0.0.3
 langchainhub==0.1.20
 
 # RAG & Document Processing
-chromadb==0.5.3
+# FIX: Upgraded chromadb to resolve telemetry error spam
+chromadb==0.5.4
 pypdf==4.2.0
 python-docx==1.1.2
 unstructured[pdf]==0.14.8
 pdfminer.six==20221105
 opencv-python-headless==4.9.0.80
 nltk==3.8.1
-# FIX: Corrected the typo in the version number
 certifi==2024.7.4
 
 # Tools & Utilities
